# otim

./: LICENSE  README.md
client/OTMP.xcworkspace/: contents.xcworkspacedata
client/source/: CMakeLists.txt
client/source/3rd/: CMakeLists.txt  build-android-armeabi.sh  ios-build-libcurl.sh  ios-build-libssl.sh
client/source/3rd/OpenSSL/include/openssl2/: opensslconf_tvos_arm64.h
client/source/3rd/rapidjson/: document.h
client/source/include/: OMTPConst.h  OMTPHostInfo.h  msgcontent.h  otim.h  otim_err.h
client/source/include/tup/: RequestF.h  TarsJson.h  TarsType.h
client/source/src/: CBasicQueue.h  CLog.cpp  CLog.h  CSSLSocket.cpp  CSSLSocket.h  CSafeQueue.h  CTNChatManager.cpp  CTNChatManager.h  CTNInflightVector.cpp  CTNInflightVector.h  CTNNetwork.h  CTNPacket.h  CTNProcessThread.cpp  CTNProcessThread.h  CTNSendRecvThread.cpp  CTNSendRecvThread.h  CTNSocketSelect.cpp  CTNSocketSelect.h  CTcpSocket.cpp  CTcpSocket.h  CThreadEx.cpp  CThreadEx.h  OMTPConfig.cpp  OMTPConfig.h  OMTPResponse.h  ptcldefine.h
client/source/src/tars_util/: tc_common.cpp  tc_ex.cpp  tc_file.cpp  tc_json.cpp  tc_port.cpp
client/source/src/unix/: CTNSocketBreaker.cpp  CTNSocketBreaker.h
client/source/src/win32/: CTNSocketBreaker.cpp  CTNSocketBreaker.h
doc/: 1-基础篇 基于Tars高并发IM系统的设计与实现.docx  1-基础篇 基于Tars高并发IM系统的设计与实现.md  2-进阶篇 基于Tars高并发IM系统的设计与实现.docx  2-进阶篇 基于Tars高并发IM系统的设计与实现.md  3-实战篇 基于Tars高并发IM系统的设计与实现.docx  3-实战篇 基于Tars高并发IM系统的设计与实现.md  OMTP协议说明文档.docx  OMTP协议说明文档.md
server/: makefile
server/AuthServer/: AuthServant.tars  AuthServantImp.cpp  AuthServantImp.h  AuthServer.cpp  AuthServer.h  makefile
server/BizMsgServer/: BizMsgServant.tars  BizMsgServantImp.cpp  BizMsgServantImp.h  BizMsgServer.cpp  BizMsgServer.h  makefile
server/BrokerServer/: BorkerPushServant.h  BorkerServant.h  BrokerPushServant.tars  BrokerPushServantImp.cpp  BrokerPushServantImp.h  makefile  (+8 more)
test/: GlobalEnv.h  TestAllCase.cpp  TestFServer.cpp  TestGServer.cpp  TestHttpServer.cpp  TestRServer.cpp  makefile  readme.txt  t.sh
(+126 files in other folders)
